# ITQ

./: .gitignore  CMakeLists.txt  README.md
include/: SPMCQueue.hpp  SPSCQueue.hpp  common.hpp
itq/: IQueueCRTP.hpp  SPMCQueue.hpp  SPSCQueue.hpp
test/: CMakeLists.txt  test_spmc.cpp  test_spsc.cpp
